samples/_failures_safe/1761615528_47a18e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_401cb038.c: In function ‘main’:
./samples/SAFE/__tmp_401cb038.c:149:12: error: missing terminating " character
  149 |     printf("Testing graph
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_401cb038.c:149:5: error: expected expression at end of input
  149 |     printf("Testing graph
      |     ^~~~~~
./samples/SAFE/__tmp_401cb038.c:149:5: error: expected declaration or statement at end of input
